# libby-tag-from-goodreads

./: .gitignore  Cargo.toml  README.md  index.html
scripts/: extract_goodreads_cookies.sh
src/: browse.rs  goodreads.rs  goodreads_export.rs  lib.rs  libby.rs  logging.rs  main.rs
