[package]
name = "gr2libby"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.2"
clap = { version = "4.3.10", features = ["derive"] }
colored = "2.0.4"
csv = "1.2.2"
edit-distance = "2.1.0"
futures = "0.3.30"
itertools = "0.12.0"
reqwest = { version = "0.11.18", features = ["serde_json", "json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
serde_urlencoded = "0.7.1"
test-log = { version = "0.2.16", features = ["trace"] }
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-glog = "0.3.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
