[package]
name = "gr2libby"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
base64 = "0.22.1"
clap = { version = "4.5.29", features = ["derive"] }
colored = "3.0.0"
csv = "1.2.2"
edit-distance = "2.1.0"
futures = "0.3.30"
itertools = "0.14.0"
reqwest = { version = "0.11.27", features = ["serde_json", "json"] }
scraper = "0.22"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
serde_urlencoded = "0.7.1"
test-log = { version = "0.2.16", features = ["trace"] }
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
jt_init_logging = { git = "https://github.com/jdthomas/jt_init_logging.git", version = "0.1.0" }
